<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/LogInBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teamtwaalf.politiekebarometer.activity.MainActivity">

    <Button
        android:id="@+id/ButtonInlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.697" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/UserName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Paswoord"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="133dp" />

    <TextView
        android:id="@+id/testTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonInlog" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="91dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:src="@android:drawable/ic_menu_myplaces"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="81dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:src="@android:drawable/ic_lock_lock"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="133dp" />

</android.support.constraint.ConstraintLayout>
