<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/graphTitles"
        android:textColor="@color/graphTitleText"
        android:text="TextView"
        android:textAlignment="center"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberStart"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_marginTop="144dp"
        android:text="TextView"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberEnd"
        android:layout_width="127dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberStart" />

    <TextView
        android:id="@+id/numberCount"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:text="TextView"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberEnd" />

    <TextView
        android:id="@+id/TextViewLabelBeginDatum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="16dp"
        android:text="@string/labelBeginDatumTweet"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberStart"
        app:layout_constraintEnd_toStartOf="@+id/numberStart"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/labelBeginDatumTweet" />

    <TextView
        android:id="@+id/textViewEindeDatum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:text="@string/aantalTweetsLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberEnd"
        app:layout_constraintEnd_toStartOf="@+id/numberEnd"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/DatumLaatsteTweet" />

    <TextView
        android:id="@+id/textViewAantalTweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/DatumLaatsteTweet"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberCount"
        app:layout_constraintEnd_toStartOf="@+id/numberCount"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/aantalTweetsLabel" />
</android.support.constraint.ConstraintLayout>